# dl_exam_task

./: .gitignore  Ilia_Zubov_exam.ipynb  exam.ipynb  pyproject.toml
