[project]
name = "deep-learning-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jupyterlab>=4.4.3",
    "jupyterlab-code-formatter>=3.0.2",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "scikit-learn>=1.7.0",
    "tensorflow[and-cuda]>=2.19.0",
]
